# midicaptain_remedy

./: .gitignore  CLAUDE.md  PTSans-Bold-60.pcf  PTSans-Regular-20.pcf  README.md  RECON_live-sync_rust-port_poc.txt  code.py  diagram.json  test_hardware.py  test_minimal.py  wokwi.toml
.claude/: launch.json
HKAudio_firmware/: README.md
HKAudio_firmware/docs/: HKAudioSetup
HKAudio_firmware/src/: code.py
HKAudio_firmware/src/fonts/: PTSans-NarrowBold-54.pcf
MIDICAPTAIN_OEM_BACKUP/: FW-SuperMode-4.0-BriefGuide.txt  FW-SuperMode-4.0-Descripción breve.txt  FW-SuperMode-4.0-Kurze Beschreibung.txt  FW-SuperMode-4.0-Краткое пояснение.txt  FW-SuperMode-4.0-简要说明.txt  FW-SuperMode-4.0-簡潔な説明.txt  FW-SuperMode-4.0-簡潔描述.txt  FW-SuperMode-4.0-약자 설명.txt  Readme_CN for FW2.0.txt  boot_out.txt  code.py
MIDICAPTAIN_OEM_BACKUP/RECOVERY_FILE_UF2/: midicpPico.uf2  midicpPico.uf2Zone.Identifier
MIDICAPTAIN_OEM_BACKUP/TIME_TRACK/P1/: TIME TRACK1.txt  TIME TRACK9.txt
MIDICAPTAIN_OEM_BACKUP/TIME_TRACK/P10/: TIME TRACK1.txt  TIME TRACK2.txt  TIME TRACK5.txt
MIDICAPTAIN_OEM_BACKUP/TIME_TRACK/P2/: TIME TRACK1.txt  TIME TRACK4.txt
MIDICAPTAIN_OEM_BACKUP/TIME_TRACK/P3/: TIME TRACK8.txt
MIDICAPTAIN_OEM_BACKUP/TIME_TRACK/P5/: TIME TRACK7.txt
MIDICAPTAIN_OEM_BACKUP/TIME_TRACK/P6/: TIME TRACK1.txt
MIDICAPTAIN_OEM_BACKUP/TIME_TRACK/P7/: TIME TRACK1.txt
MIDICAPTAIN_OEM_BACKUP/TIME_TRACK/P8/: TIME TRACK1.txt  TIME TRACK3.txt  TIME TRACK6.txt
MIDICAPTAIN_OEM_BACKUP/TIME_TRACK/P9/: TIME TRACK10.txt
MIDICAPTAIN_OEM_BACKUP/geeksetup/: GeekSetup.txt
MIDICAPTAIN_OEM_BACKUP/setup/: GlobalSetup1.txt  GlobalSetup10.txt  GlobalSetup2.txt  GlobalSetup3.txt  GlobalSetup4.txt  GlobalSetup5.txt  GlobalSetup6.txt  GlobalSetup7.txt  GlobalSetup8.txt  GlobalSetup9.txt
MIDICAPTAIN_OEM_BACKUP/setup/preset1/: key0.txt  key1.txt  key2.txt  key3.txt  key4.txt  key7.txt  key8.txt
MIDICAPTAIN_OEM_BACKUP/setup/preset10/: key0.txt  key1.txt  key2.txt  key3.txt  key4.txt  key5.txt  key6.txt  key7.txt  key8.txt  key9.txt
MIDICAPTAIN_OEM_BACKUP/setup/preset2/: key0.txt  key1.txt  key2.txt  key3.txt  key6.txt  key8.txt
MIDICAPTAIN_OEM_BACKUP/setup/preset3/: key0.txt  key1.txt  key2.txt  key4.txt  key9.txt
MIDICAPTAIN_OEM_BACKUP/setup/preset4/: key0.txt  key1.txt  key2.txt  key3.txt  key6.txt
MIDICAPTAIN_OEM_BACKUP/setup/preset5/: key0.txt  key1.txt  key2.txt  key3.txt  key8.txt
MIDICAPTAIN_OEM_BACKUP/setup/preset6/: key0.txt  key1.txt  key2.txt  key3.txt  key5.txt  key8.txt
MIDICAPTAIN_OEM_BACKUP/setup/preset7/: key0.txt  key1.txt  key2.txt  key3.txt  key4.txt  key5.txt  key6.txt  key7.txt  key8.txt  key9.txt
MIDICAPTAIN_OEM_BACKUP/setup/preset8/: key0.txt  key1.txt  key2.txt  key3.txt  key4.txt  key5.txt  key6.txt  key7.txt  key8.txt  key9.txt
MIDICAPTAIN_OEM_BACKUP/setup/preset9/: key0.txt  key1.txt  key2.txt  key3.txt  key4.txt  key5.txt  key6.txt  key7.txt  key8.txt  key9.txt
MIDICAPTAIN_OEM_BACKUP/supersetup/: page0.txt  page1.txt  page10.txt  page11.txt  page12.txt  page13.txt  page14.txt  page15.txt  page16.txt  page17.txt  page18.txt  page2.txt  page3.txt  page4.txt  page5.txt  page6.txt  page7.txt  page8.txt  page9.txt
MIDICAPTAIN_OEM_BACKUP/wallpaper/: readme EN CN SP DE KR JP RU .txt
docs/: reveng.md
docs/dev/: PRACTICAL_MIDI_EXTENSIONS.md  ROADMAP.md  katana_full_reference.toml
docs/dev/config_examples/: global.toml
docs/dev/config_examples/pages/: katana_live.toml
docs/dev/config_examples/setlists/: friday_gig.toml
firmware/: .gitignore  ARCHITECTURE.md  Cargo.toml  HANDOFF.md  HARDWARE.md  README.md  TESTING.md  build.rs  memory.x  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/examples/: blink.rs  config_selftest.rs  display_grid.rs  display_splash.rs  display_widgets.rs  encoder_test.rs  expression_test.rs  leds_test.rs  midi_engine_test.rs  midi_passthrough.rs  pitch_selftest.rs  proto_selftest.rs  serial_echo.rs  storage_coexist_selftest.rs  storage_test.rs
firmware/scripts/: README.md  cdc_config_client.py  midimon.ps1  sysex_decode.py
firmware/src/: app.rs  display.rs  editor.rs  events.rs  lib.rs  menu.rs  pins.rs  pitch.rs  proto.rs  storage.rs  tuner.rs
firmware/src/config/: mod.rs
firmware/src/hal/: buttons.rs  encoder.rs  expression.rs  hid.rs  leds.rs  mod.rs
firmware/src/midi/: katana.rs  mod.rs  mux.rs  sysex.rs
firmware/src/ui/: element.rs  list_view.rs  mod.rs  page_grid.rs  palette.rs  text_panel.rs  tuner.rs  value_bar.rs
midicaptain-presets/: README.md
midicaptain-presets/.claude-plugin/: plugin.json
midicaptain-presets/commands/: midicaptain-preset.md
midicaptain-presets/skills/midicaptain-preset/: SKILL.md
midicaptain-presets/skills/midicaptain-preset/references/: cc-reference.md  geekmode-format.md  sources.md  supermode-format.md
midicaptain-presets/skills/midicaptain-preset/scripts/: generate.py
open-stomp/: ARCHITECTURE.md  README.md  SCRATCHPAD.txt
presets/geeksetup/: GeekSetup.txt  README.txt  _generate.py
presets/supersetup/: README.txt  page0.txt  page1.txt  page2.txt  page3.txt  page4.txt
remedy/: boot.py  boot.py.bak  code.py  main.py
remedy/config/: global.toml
remedy/config/pages/: daw-control.toml  default.toml  katana-live.toml
remedy/config/profiles/: generic_cc.toml  katana.toml
remedy/config/setlists/: example.toml
remedy/lib/: __init__.py  config.py  display.py  events.py  hardware.py  menu.py  midi.py  pins.py  tuner.py
scripts/: bootsel_hammer.py  display_test.py  encoder.py  expressionin.py  generate_geek_setup.py  gpioloopback.py  led_encoder.py  led_rainbow.py  midi_uart.py  switch.py
src/: boot.py  code.py
webapp/: LIVE_SYNC.md  README.md  app.js  index.html  live.html  package.json  style.css
webapp/css/: style.css
webapp/js/: app.js
webapp/js/device/: cobs.js  crc16.js  frame.js  postcard.js  protocol.js  runtimeconfig.js  serial.js  varint.js
webapp/js/ui/: board.js  dom.js  inspector.js  live.js  oem.js
webapp/test/: codec.test.mjs  gen_golden.py  golden_vectors.json  serve.mjs
